@@ -81,7 +81,8 @@ team members, priorities and time estimate methods.</p>
 <li><b>work_priority.unknown</b> - the priority is unknown</li>
 <li><b>work_priority.level</b> - the priority is 'l' (low), 'm' (medium) or 'h' (high)</li>
 <li><b>work_priority.severity</b> - the priority is a level number, 1..5</li>
-<li><b>work_priority.risk</b> - - the priority is a number representing risk</li>;
+<li><b>work_priority.risk</b> - the priority is a number representing risk</li>;
+<li><b>work_priority.cvss</b> - the priority is a number representing the Common Vulnerability Scoring System (CVSS) score, 0.0..10.0</li>;
 </ul>
 
 
