@@ -56,7 +56,7 @@ For example,
 
         <center>
         <div class="code">
-	<p class="code">=&gt; -- SparForte is great</p>
+	<p class="code">=&gt; null; -- SparForte is great</p>
         </div>
         </center>
 
